# relative-position

./: CLAUDE.md  README.md  example.py  example_config.ini  example_ele.py  example_simple_api.py  pyproject.toml  requirements.txt  test_architecture.py
.claude/: settings.local.json
example/: test_ele.py
relative_position/: __init__.py  app.py  config.py  elements.py  exceptions.py  utils.py
relative_position/linux/: __init__.py  base.py  main.py  wayland_wininfo.py  x11_wininfo.py
relative_position/windows/: __init__.py  main.py  windows_wininfo.py
