[project]
name = "relative-position"
description = "A Python library for positioning UI elements relative to window coordinates on Linux and Windows platforms"
authors = [
    { name = "mikigo", email = "mikigo@foxmail.com" },
]
dependencies = [
    "psutil>=5.9.0;sys_platform == 'win32'",
    "dbus-python>=1.3.2;sys_platform == 'linux'"
]
dynamic = [
  "version",
]
requires-python = ">=3.6"
readme = "README.md"
license = { text = "Apache2.0" }

[project.optional-dependencies]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "relative_position/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/relative_position",
]
[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/.env",
  "/.idea",
  "/.pytest_cache",
  "/.gitignore",
  "/dist",
  "/docs",
  "/tests",
  "/debug.py",
  "/run.py",
  "/pytest.ini",
  "/metadata",
  "/publish.bat",
  "/reports",
  "/results",
]